--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <img src="./assets/images/about-bg.jpg" alt="">
             </div>
             <div class="about-text">
-                <h1>WELCOME TO <span class="icon"></span><span class="pizza">PIZZA</span> A RESTAURANT</h1>
+                <h1>WELCOME TO <span class="icon"><i class="fa-solid fa-pizza-slice"></i></span><span class="pizza"> PIZZA</span> A RESTAURANT</h1>
                 <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
             </div>
         </div>
